# hlc

./: README.md  pyproject.toml  sample.c
src/hlc/: __init__.py  writer.py
src/msc/: __init__.py  items.py  terms.py  ty.py  writer.py
tests/: test_items.py  test_terms.py  test_ty.py  test_writer.py
